--- a/src/main.sass
+++ b/src/main.sass
@@ -9,6 +9,7 @@
   --bg: 1
   --black: #000000
   --hover: #8c8c8c
+  --hoverbg: #bcbcbc
   --white: #ffffff
   --borderhead: #dbdbdb
   --inputtext: #2c2c2c
@@ -60,7 +61,7 @@ a
     font-family: Roboto
     color: var(--black)
     cursor: pointer
-    &:hover
+    //&:hover
         
 
 html
@@ -353,6 +354,9 @@ input::-webkit-inner-spin-button
     &__date
         width: 362px
 
+input[type='date']::-webkit-calendar-picker-indicator 
+    filter: invert(var(--img))
+
 .ismobile
     display: none 
 .isnotmobile
@@ -368,12 +372,13 @@ input::-webkit-inner-spin-button
   .dropdown-menu
     position: absolute
     top: calc(100% + 10px)   
-    left: -100px 
+    left: -140px 
     display: none
     background-color: var(--white)
     border-radius: 20px
     border: 1px solid var(--borderhead)
     padding: 10px
+    width: 230px
 
     ul
       list-style: none
@@ -479,6 +484,20 @@ input::-webkit-inner-spin-button
 //   &.hover:hover li:first-child, &.toggle > input:checked ~ ul li:first-child
 //     padding-top: 15px
 //----------------------------------------------------------------------------------
+.menu_list
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+
+.hr-line 
+    margin: 2px 0 2px 0
+    padding: 0
+    height: 0
+    border: none
+    border-top: 1px solid var(--black)
+    width: 10px
+
 
 .copy_animate_on
     animation: 3s visible_on 
@@ -681,7 +700,7 @@ input::-webkit-inner-spin-button
         height: 300px
         border: 0px solid #16121a
         &__xl
-            height: 700px
+            height: 670px
         &__info
             font-size: 14px
             width: 340px
@@ -716,6 +735,8 @@ input::-webkit-inner-spin-button
         width: 345px
         height: 300px
         border: 0px solid #16121a
+        &__xl
+            height: 670px
         &__info
             font-size: 14px
             width: 340px
