--- a/src/main.sass
+++ b/src/main.sass
@@ -368,6 +368,11 @@ input[type='date']::-webkit-calendar-picker-indicator
 
   .dropdown-toggle
     cursor: pointer
+    font-size: 22px
+    font-family: Roboto
+    font-weight: 600
+    color: var(--black)
+    margin: 0
 
   .dropdown-menu
     position: absolute
