--- a/src/main.css
+++ b/src/main.css
@@ -399,6 +399,11 @@ input[type=date]::-webkit-calendar-picker-indicator {
 }
 .dropdown .dropdown-toggle {
   cursor: pointer;
+  font-size: 22px;
+  font-family: Roboto;
+  font-weight: 600;
+  color: var(--black);
+  margin: 0;
 }
 .dropdown .dropdown-menu {
   position: absolute;
