--- a/src/main.css
+++ b/src/main.css
@@ -284,7 +284,7 @@ input::-webkit-inner-spin-button {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 350px;
+  width: 370px;
 }
 
 .result_container {
@@ -408,6 +408,15 @@ input[type=date]::-webkit-calendar-picker-indicator {
   display: flex;
 }
 
+.add_button {
+  all: unset;
+  background-color: none;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  filter: invert(var(--img));
+}
+
 .dropdown {
   position: relative;
 }
@@ -504,6 +513,27 @@ input[type=date]::-webkit-calendar-picker-indicator {
   opacity: 0;
 }
 
+.load_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 420px;
+}
+
+.load_img {
+  animation: load_img 1s infinite;
+  filter: invert(var(--img));
+}
+
+@keyframes load_img {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(180deg);
+  }
+}
 @keyframes visible_on {
   0% {
     opacity: 0;
@@ -715,7 +745,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
     border: 0px solid #16121a;
   }
   .card__xl {
-    height: 670px;
+    height: 685px;
   }
   .card__info {
     font-size: 14px;
@@ -730,7 +760,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
     height: 220px;
   }
   .card__main__xl {
-    height: 520px;
+    height: 540px;
   }
   .card__main__inputs {
     height: 110px;
@@ -742,7 +772,10 @@ input[type=date]::-webkit-calendar-picker-indicator {
     height: 72px;
   }
   .ticker_add {
-    width: 250px;
+    width: 270px;
+  }
+  .load_container {
+    height: 540px;
   }
 }
 @media screen and (max-width: 390px) {
@@ -771,7 +804,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
     border: 0px solid #16121a;
   }
   .card__xl {
-    height: 670px;
+    height: 685px;
   }
   .card__info {
     font-size: 14px;
@@ -786,7 +819,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
     height: 220px;
   }
   .card__main__xl {
-    height: 520px;
+    height: 540px;
   }
   .card__main__inputs {
     height: 110px;
@@ -798,6 +831,9 @@ input[type=date]::-webkit-calendar-picker-indicator {
     height: 72px;
   }
   .ticker_add {
-    width: 250px;
+    width: 270px;
+  }
+  .load_container {
+    height: 540px;
   }
 }/*# sourceMappingURL=main.css.map */
