--- a/src/main.sass
+++ b/src/main.sass
@@ -268,7 +268,7 @@ input::-webkit-inner-spin-button
     flex-direction: row
     align-items: center
     justify-content: space-between
-    width: 350px
+    width: 370px
 
 .result_container
     display: flex
@@ -374,6 +374,13 @@ input[type='date']::-webkit-calendar-picker-indicator
     display: flex 
 
 .add_button
+    all: unset
+    background-color: none
+    width: 40px
+    height: 40px
+    cursor: pointer
+    filter: invert(var(--img))
+
     
 //----------------------------------------------------------------------------------
 .dropdown
@@ -550,6 +557,25 @@ input[type='date']::-webkit-calendar-picker-indicator
     transform: translate(30px, 0)
     opacity: 0
 
+.load_container
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 100%
+    height: 420px
+
+.load_img
+    animation: load_img 1s infinite
+    filter: invert(var(--img))
+
+
+@keyframes load_img 
+    0%
+        transform: rotate(0)
+    100%
+        transform: rotate(180deg)
+    
+
 @keyframes visible_on
     0% 
         opacity: 0
@@ -724,7 +750,7 @@ input[type='date']::-webkit-calendar-picker-indicator
         height: 300px
         border: 0px solid #16121a
         &__xl
-            height: 670px
+            height: 685px
         &__info
             font-size: 14px
             width: 340px
@@ -735,7 +761,7 @@ input[type='date']::-webkit-calendar-picker-indicator
             width: 700px
             height: 220px
             &__xl
-                height: 520px
+                height: 540px
             &__inputs
                 height: 110px
                 &__xl
@@ -743,7 +769,10 @@ input[type='date']::-webkit-calendar-picker-indicator
             &__results
                 height: 72px
     .ticker_add
-        width: 250px
+        width: 270px
+
+    .load_container
+        height: 540px
 
 @media  screen and (max-width: 390px) 
     .input 
@@ -766,7 +795,7 @@ input[type='date']::-webkit-calendar-picker-indicator
         height: 300px
         border: 0px solid #16121a
         &__xl
-            height: 670px
+            height: 685px
         &__info
             font-size: 14px
             width: 340px
@@ -777,7 +806,7 @@ input[type='date']::-webkit-calendar-picker-indicator
             width: 700px
             height: 220px
             &__xl
-                height: 520px
+                height: 540px
             &__inputs
                 height: 110px
                 &__xl
@@ -785,5 +814,8 @@ input[type='date']::-webkit-calendar-picker-indicator
             &__results
                 height: 72px
     .ticker_add
-        width: 250px
+        width: 270px
+
+    .load_container
+        height: 540px
 
