--- a/src/main.css
+++ b/src/main.css
@@ -416,7 +416,30 @@ input[type=date]::-webkit-calendar-picker-indicator {
   cursor: pointer;
   filter: invert(var(--img));
 }
+.add_button:hover {
+  animation: 0.4s btn_anim;
+}
 
+@keyframes btn_anim {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(15deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(-15deg);
+  }
+  95% {
+    transform: rotate(3deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
 .dropdown {
   position: relative;
 }
