--- a/src/main.sass
+++ b/src/main.sass
@@ -380,7 +380,22 @@ input[type='date']::-webkit-calendar-picker-indicator
     height: 40px
     cursor: pointer
     filter: invert(var(--img))
+    &:hover
+        animation: 0.4s btn_anim
 
+@keyframes btn_anim 
+    0%
+        transform: rotate(0deg)
+    25%
+        transform: rotate(15deg)
+    50%
+        transform: rotate(0deg)
+    75%
+        transform: rotate(-15deg)
+    95%
+        transform: rotate(3deg)
+    100%
+        transform: rotate(0deg)
     
 //----------------------------------------------------------------------------------
 .dropdown
