--- a/src/main.css
+++ b/src/main.css
@@ -417,7 +417,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
   filter: invert(var(--img));
 }
 .add_button:hover {
-  animation: 0.2s btn_anim;
+  animation: 0.3s btn_anim;
 }
 
 @keyframes btn_anim {
@@ -710,6 +710,9 @@ input[type=date]::-webkit-calendar-picker-indicator {
   nav {
     display: none;
   }
+  h2 {
+    font-size: 18px;
+  }
   .input {
     width: 340px;
     height: 40px;
@@ -768,7 +771,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
     border: 0px solid #16121a;
   }
   .card__xl {
-    height: 685px;
+    height: 700px;
   }
   .card__info {
     font-size: 14px;
@@ -802,6 +805,9 @@ input[type=date]::-webkit-calendar-picker-indicator {
   }
 }
 @media screen and (max-width: 390px) {
+  h2 {
+    font-size: 18px;
+  }
   .input {
     width: 320px;
     height: 40px;
@@ -827,7 +833,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
     border: 0px solid #16121a;
   }
   .card__xl {
-    height: 685px;
+    height: 700px;
   }
   .card__info {
     font-size: 14px;
