--- a/src/main.sass
+++ b/src/main.sass
@@ -381,7 +381,7 @@ input[type='date']::-webkit-calendar-picker-indicator
     cursor: pointer
     filter: invert(var(--img))
     &:hover
-        animation: 0.2s btn_anim
+        animation: 0.3s btn_anim
 
 @keyframes btn_anim 
     0%
@@ -715,6 +715,9 @@ input[type='date']::-webkit-calendar-picker-indicator
     nav
         display: none
 
+    h2
+        font-size: 18px
+
     .input 
         width: 340px
         height: 40px
@@ -765,7 +768,7 @@ input[type='date']::-webkit-calendar-picker-indicator
         height: 300px
         border: 0px solid #16121a
         &__xl
-            height: 685px
+            height: 700px
         &__info
             font-size: 14px
             width: 340px
@@ -790,6 +793,10 @@ input[type='date']::-webkit-calendar-picker-indicator
         height: 540px
 
 @media  screen and (max-width: 390px) 
+    
+    h2
+        font-size: 18px
+
     .input 
         width: 320px
         height: 40px
@@ -810,7 +817,7 @@ input[type='date']::-webkit-calendar-picker-indicator
         height: 300px
         border: 0px solid #16121a
         &__xl
-            height: 685px
+            height: 700px
         &__info
             font-size: 14px
             width: 340px
