--- a/src/main.sass
+++ b/src/main.sass
@@ -239,6 +239,12 @@ input::-webkit-inner-spin-button
         padding: 0 0 14px 0
     &__empty
         height: 0
+    &__container
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: space-between
+        height: 1700px 
     &__main
         display: flex
         flex-direction: row
@@ -583,6 +589,29 @@ input[type='date']::-webkit-calendar-picker-indicator
     animation: load_img 1s infinite
     filter: invert(var(--img))
 
+.page_swap-enter-active, .page_swap-leave-active 
+  animation: load_page 0.5s
+
+.page_swap-enter-from, .page_swap-leave-to 
+  animation: swap_page 0.3s
+
+@keyframes load_page 
+    0% 
+        transform: translate(0, -80px)
+        opacity: 0
+    100% 
+        transform: translate(0, 0)
+        opacity: 1
+        
+@keyframes swap_page 
+    0% 
+        transform: translate(0, 0)
+        opacity: 1
+    20%
+        opacity: 0.1
+    100% 
+        transform: translate(0, 80px)
+        opacity: 0
 
 @keyframes load_img 
     0%
